# python-stretch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
examples/: library_comparison.ipynb  test_timeit.py
src/: bidings.cpp  signalsmith-bindings.cpp  stretch-bindings.cpp
src/pystretch/: __init__.py
src/python_stretch/: __init__.py
tests/: test_basic.py  test_pystretch.py
