[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "python-stretch"
version = "0.0.1"
description = "A Python Wrapprer of the Signalsmith Stretch C++ library for pitch and time stretching"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gregorio Andrea Giudici", email = "greg.giudici96@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/gregogiudici/python-stretch"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy"]

# Don't test Python 3.8 wheels on macOS/arm64
# test-skip="cp38-macosx_*:arm64"
# Don't test Python 3.9 wheels on manylinux_i686
test-skip="pp39-manylinux_i686"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
